# simpledb

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: rust.yml
buffer/: Cargo.toml
buffer/src/: buffer.rs  lib.rs  mgr.rs
client/: Cargo.toml
common/: Cargo.toml
common/src/: error.rs  lib.rs  locks.rs
engine/: Cargo.toml
engine/benches/: db_benchmark.rs  insert_benchmark.rs
engine/src/: buffer_needs.rs  constant.rs  element.rs  field_info.rs  index.rs  index_mgr.rs  layout.rs  lib.rs  metadata_mgr.rs  order.rs  plan.rs  predicate.rs  query.rs  record_page.rs  scan.rs  schema.rs  schema_mapping.rs  sort_by.rs  stat_mgr.rs  table_mgr.rs  temp.rs  value.rs  view_mgr.rs
engine/src/index/: b_tree.rs  btree_dir.rs  btree_leaf.rs  indexer.rs
engine/src/index/b_tree/: entry.rs
engine/src/plan/: group.rs  index.rs  materialize.rs  merge.rs  multibuffer.rs  order.rs  product.rs  project.rs  select.rs  sort.rs  table.rs
engine/src/query/: basic_planner.rs  command.rs  heuristic_planner.rs  lexer.rs  parser.rs  planner.rs  result.rs  table_planner.rs  token.rs
engine/src/scan/: chunk.rs  group.rs  index.rs  merge.rs  multibuffer.rs  order.rs  product.rs  project.rs  select.rs  sort.rs  table.rs
file/: Cargo.toml
file/src/: block.rs  holder.rs  lib.rs  mgr.rs  page.rs
index/: Cargo.toml
index/src/: lib.rs
log/: Cargo.toml
log/src/: lib.rs  mgr.rs
network/: Cargo.toml
plan/: Cargo.toml
plan/src/: plan.rs  scan.rs
planner/: Cargo.toml
planner/src/: element.rs  layout.rs  lib.rs  mgr.rs  plan.rs  predicate.rs  scan.rs  schema.rs  temp.rs
planner/src/index/: b_tree.rs
planner/src/mgr/: index.rs  metadata.rs  stat.rs  table.rs  (+1 more)
query/: Cargo.toml
query/src/: command.rs  lexer.rs  lib.rs  parser.rs  plan.rs  scan.rs  token.rs  tokenizer.rs
scan/: Cargo.toml
scan/src/: element.rs  field_info.rs  index.rs  lib.rs  predicate.rs  record_page.rs  rid.rs  scanner.rs  schema.rs  select.rs  table.rs  value.rs
scan/src/index/: b_tree.rs
scan/src/index/b_tree/: page.rs
schema/src/: table_scan.rs
server/: Cargo.toml
table/: Cargo.toml
table/benches/: insert_benchmark.rs
table/src/: constant.rs  field_info.rs  group.rs  group_by.rs  index.rs  index_mgr.rs  layout.rs  lib.rs  metadata_mgr.rs  plan.rs  predicate.rs  query.rs  record_page.rs  rid.rs  scan.rs  schema.rs  sort.rs  stat_mgr.rs  table_mgr.rs  table_scan.rs  temp.rs  view_mgr.rs
table/src/group/: aggregation_fn.rs  plan.rs  scan.rs
table/src/index/: b_tree.rs  bt_page.rs  btree.rs  btree_leaf.rs  btree_page.rs  dir_entry.rs
table/src/merge/: plan.rs  scan.rs
table/src/plan/: group.rs  index.rs  merge.rs  multibuffer.rs  product.rs  project.rs  select.rs  sort.rs  table.rs
table/src/query/: basic_planner.rs  command.rs  lexer.rs  parser.rs  planner.rs  token.rs  tokenizer.rs
table/src/scan/: chunk.rs  group.rs  index.rs  merge.rs  multibuffer.rs  product.rs  product_scan.rs  project.rs  project_scan.rs  select.rs  select_scan.rs  sort.rs  table.rs  table_scan.rs
table/src/sort/: plan.rs  record_comparator.rs  scan.rs
table/src/temp/: meterialize_plan.rs
transaction/: Cargo.toml
transaction/src/: buffer_list.rs  concurrency.rs  lib.rs  lock_table.rs  log.rs  transaction.rs  txnum_generator.rs
transaction/src/concurrency/: locks.rs  mgr.rs
transaction/src/recovery/: mgr.rs
(+16 files in other folders)
