[package]
name = "engine"
edition = "2024"
version.workspace = true

[[bench]]
name = "db_benchmark"
harness = false

[dependencies]
buffer = { path = "../buffer" }
log = { path = "../log" }
common = { path = "../common" }
file = { path = "../file" }
transaction = { path = "../transaction" }
tracing = { workspace = true }
rand = { workspace = true }
planner = { path = "../planner" }

[dev-dependencies]
criterion = { workspace = true }
tempfile = { workspace = true }
