[package]
name = "table"
edition = "2024"
version.workspace = true

[dependencies]
buffer = { path = "../buffer" }
log = { path = "../log" }
common = { path = "../common" }
file = { path = "../file" }
transaction = { path = "../transaction" }
tracing = { workspace = true}
rand = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
